fixed visible icons in preloading

--- a/public/stylesheets/layout/layout_app.css
+++ b/public/stylesheets/layout/layout_app.css
@@ -6,7 +6,8 @@ body {
   transition: all 200ms linear; 
 }
 /* Preloader */
-body:after {
+body:before {
+  display: none;
   content: url('/images/settings/activity_icon_selected@2x.png')
            url('/images/settings/creditcard_icon_selected@2x.png')
            url('/images/settings/graph_icon_selected@2x.png')
